--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
 
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Ferias de plantas</title>
+    <title>Ferias de plantas!!</title>
 </head>
 
 <body>
