--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
 
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Ferias de plantas!!</title>
+    <title>Ferias de plantas!</title>
 </head>
 
 <body>
@@ -49,7 +49,7 @@
                 <br>
                 <h4>3er <small>Expo ferias de las plantas</small></h4>
                 <br>
-                <p>Este fin de semana llega la 3 era edición de la feria de plantas a San salvador de Jujuy ena la Ciudad Culturar, en la que se pueden comprar a precios accesibles las plantas multiplicadas por los propios jardineros del botánico.</p>
+                <p>Este fin de semana llega la 3 era edición de la feria de plantas a San salvador de Jujuy ena la Ciudad Culturar<br> en la que se pueden comprar a precios accesibles las plantas multiplicadas por los propios jardineros del botánico.</p>
             </div>
             <div class="imagen">
                 <img src="images/floricultura.jpg" alt="Fotos de a todo Jujuy">
@@ -58,7 +58,7 @@
 
         <section class="evento" id="evento">
             <div class="video">
-                <embed src="https://www.youtube.com/embed/8fvGJT3G6ek"></embed>
+                <embed src="https://www.youtube.com/embed/8fvGJT3G6ek" width="700" height="400"></embed>
             </div>
             <div class="evento_description">
                 <h2>Videos de la expo 2</h2>
